# dillagent

./: .gitignore  LICENSE  README.md  demo.py  extensive_demo.py  main.py  multiInputTester.py  pyproject.toml  requirements.txt  signalFlow_demo.py  test.py
Dependencies/Parsers/: IntermediateParser.py
Dependencies/Prompts/: MultiInputSysPrompt.py  StructuredPrompt.py  SysPrompt.py  __init__.py
LLM/: AnthropicLLM.py  CustomLLM.py  LLM.py  OpenAILLM.py
agents/: AgentExecutor.py  BaseAgent.py  CustomAgent.py
agents/Executors/: AgentExecutor.py  BaseAgentExecutor.py  ConversationalExecutor.py
agents/agents/: AdvancedAgent.py  BaseAgent.py  CustomAgent.py  CustomPromptAgent.py  __init__.py
agents/executors/: AgentExecutor.py  BaseAgentExecutor.py  ConversationalExecutor.py  __init__.py
dependencies/prompts/: Prompt.py  __init__.py
llm/: CustomLLM.py
src/dillagent/agents/agents/: AdvancedAgent.py  AgentOutput.py  BaseAgent.py  CustomPromptAgent.py  StarterAgent.py  __init__.py
src/dillagent/agents/executors/: AgentExecutor.py  BaseAgentExecutor.py  ConversationalExecutor.py  StarterAgentExecutor.py  __init__.py
src/dillagent/dependencies/prompts/: BaseSysPrompt.py  MultiAgentSupervisorSysPrompt.py  MultiInputSysPrompt.py  MultiInputToolsSysPrompt.py  StructuredPrompt.py  SysPrompt.py  __init__.py
src/dillagent/llm/: AnthropicLLM.py  CustomLLM.py  LLM.py  LLMConfig.py  OpenAILLM.py  StandardizedLLMResponse.py  __init__.py
src/dillagent/models/: DescribedModel.py  __init__.py
src/dillagent/tools/: Tool.py  ToolResult.py  __init__.py
src/dillagent/workflows/: BaseWorkflowExecutor.py  __init__.py
src/dillagent/workflows/graphs/: AgentGraph.py  BaseAgentCluster.py  BaseAgentGraph.py  BaseAgentGraphExecutor.py  PlanningAgentGraphExecutor.py  StarterAgentGraph.py  StarterAgentGraphExecutor.py  __init__.py
tools/: Tool.py
(+18 files in other folders)
