[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dillagent"
version = "1.0.5"  # Update this with your desired version
description = "Agentic LLM library"
authors = [{name="buzzoo123"}]
license = {file="LICENSE"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[lib]
name = "dillagent"
version = "{version}"  # Inherits from package.version

[dependencies]